# xGame2D

./: .gitignore  CMakeLists.txt  README.md
mac/: Info.plist  main.cpp
mingw/: main.cpp
sample/: CMakeLists.txt  MyApplication.h
src/: CMakeLists.txt  Game.cpp  Game.h
src/base/: AutoreleasePool.cpp  AutoreleasePool.h  Copying.h  Data.h  Math.h  Object.h  Platform.h
src/display/: BlendMode.cpp  BlendMode.h  DisplayObject.cpp  DisplayObject.h  DisplayObjectContainer.cpp  DisplayObjectContainer.h  Image.cpp  Image.h  Quad.cpp  Quad.h  QuadBatch.cpp  QuadBatch.h  Sprite.cpp  Sprite.h  Stage.cpp  Stage.h
src/geom/: Matrix.cpp  Matrix.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
src/platform/: Application.cpp  Application.h  FileUitls.h  IApplication.h
src/platform/windows/: ApplicationWindows.cpp  FileUtilsWindows.cpp  OpenGLWindows.cpp  OpenGLWindows.h
src/render/: BaseEffect.cpp  BaseEffect.h  Context.cpp  Context.h  OpenGL.h  Program.cpp  Program.h  ProgramCache.cpp  ProgramCache.h  RenderState.cpp  RenderState.h  RenderSupport.cpp  RenderSupport.h
src/textures/: GLTexture.cpp  GLTexture.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  TextureCache.cpp  TextureCache.h
src/timer/: CallbackTimer.cpp  CallbackTimer.h  CallbackTimerMapNode.cpp  CallbackTimerMapNode.h  Timer.cpp  Timer.h  TimerHandler.cpp  TimerHandler.h  UpdateTimer.cpp  UpdateTimer.h  UpdateTimerMapNode.cpp  UpdateTimerMapNode.h
src/util/: Align.h  Console.cpp  Console.h  PVRData.cpp  PVRData.h  Utils.cpp  Utils.h  VertexData.cpp  VertexData.h
tests/: CMakeLists.txt  (+5 more)
(+55 files in other folders)
