cmake_minimum_required(VERSION 2.8)
project(xGame2D)
if(WIN32)
    set(CMAKE_CXX_FLAGS "-g -O2 -Wall -std=c++11")
else()
    set(CMAKE_CXX_FLAGS "-g -O2 -Wall -fPIC -std=c++11")
endif()
set(CMAKE_PREFIX_PATH third-party)
add_subdirectory(third-party/glfw)
add_subdirectory(third-party/glew)
add_subdirectory(third-party/lpng)
add_subdirectory(src)